[gd_scene load_steps=2 format=2]

[ext_resource path="res://HexMapEditor.gd" type="Script" id=1]

[node name="HexMapEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Control7" type="Control" parent="."]
margin_right = 70.0
margin_bottom = 43.0

[node name="Label" type="Label" parent="Control7"]
margin_left = 2.0
margin_top = 7.0
margin_right = 74.0
margin_bottom = 22.0
text = "Enable Edit"

[node name="EditCheck" type="CheckBox" parent="Control7"]
margin_left = 19.0
margin_top = 19.0
margin_right = 47.0
margin_bottom = 45.0

[node name="Control" type="Control" parent="."]
margin_left = 1.0
margin_top = 46.0
margin_right = 41.0
margin_bottom = 86.0

[node name="ColorSelector" type="ItemList" parent="Control"]
margin_right = 72.0
margin_bottom = 103.0
items = [ "None", null, false, "White", null, false, "Yellow", null, false, "Green", null, false, "Blue", null, false ]

[node name="Control2" type="Control" parent="."]
margin_left = 4.0
margin_top = 151.0
margin_right = 44.0
margin_bottom = 191.0

[node name="ElevationCheckBox" type="CheckBox" parent="Control2"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Control2"]
margin_left = 26.0
margin_top = 5.0
margin_right = 66.0
margin_bottom = 19.0
text = "Elevation"

[node name="ElevationSlider" type="HSlider" parent="Control2"]
margin_left = 1.0
margin_top = 23.0
margin_right = 70.0
margin_bottom = 45.0
max_value = 5.0
rounded = true

[node name="Control3" type="Control" parent="."]
margin_left = 1.0
margin_top = 252.0
margin_right = 89.0
margin_bottom = 299.0

[node name="RiverSelector" type="ItemList" parent="Control3"]
margin_left = 1.0
margin_top = 26.0
margin_right = 71.0
margin_bottom = 91.0
items = [ "None", null, false, "Add", null, false, "Remove", null, false ]

[node name="Label" type="Label" parent="Control3"]
margin_left = 7.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 24.0
text = "Rivers"

[node name="Control5" type="Control" parent="."]
margin_left = 2.0
margin_top = 349.0
margin_right = 90.0
margin_bottom = 396.0

[node name="RoadSelector" type="ItemList" parent="Control5"]
margin_left = 1.0
margin_top = 26.0
margin_right = 71.0
margin_bottom = 91.0
items = [ "None", null, false, "Add", null, false, "Remove", null, false ]

[node name="Label" type="Label" parent="Control5"]
margin_left = 7.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 24.0
text = "Roads"

[node name="Control4" type="Control" parent="."]
margin_left = 6.0
margin_top = 201.0
margin_right = 48.0
margin_bottom = 246.0

[node name="Label" type="Label" parent="Control4"]
margin_left = 3.0
margin_top = 6.0
margin_right = 70.0
margin_bottom = 20.0
text = "Brush Size"

[node name="BrushSizeSlider" type="HSlider" parent="Control4"]
margin_left = 1.0
margin_top = 23.0
margin_right = 70.0
margin_bottom = 45.0
max_value = 5.0
rounded = true

[node name="Control6" type="Control" parent="."]
margin_left = 1.0
margin_top = 446.0
margin_right = 41.0
margin_bottom = 486.0

[node name="Label" type="Label" parent="Control6"]
margin_left = 6.0
margin_top = 4.0
margin_right = 64.0
margin_bottom = 35.0
text = "Walled
"

[node name="ItemList" type="ItemList" parent="Control6"]
margin_left = 1.0
margin_top = 23.0
margin_right = 75.0
margin_bottom = 86.0
items = [ "---", null, false, "add", null, false, "remove", null, false ]

[connection signal="toggled" from="Control7/EditCheck" to="." method="_on_edit_toggled"]
[connection signal="item_selected" from="Control/ColorSelector" to="." method="_on_selected_color_change"]
[connection signal="toggled" from="Control2/ElevationCheckBox" to="." method="_on_edit_elevation_toggled"]
[connection signal="value_changed" from="Control2/ElevationSlider" to="." method="_on_elevation_value_changed"]
[connection signal="item_selected" from="Control3/RiverSelector" to="." method="_on_river_item_selected"]
[connection signal="item_selected" from="Control5/RoadSelector" to="." method="_on_road_item_selected"]
[connection signal="value_changed" from="Control4/BrushSizeSlider" to="." method="_on_brush_size_value_changed"]
[connection signal="item_selected" from="Control6/ItemList" to="." method="_on_walled_item_selected"]
